; ModuleID = '/home/carl/AnghaBench/git/extr_help.c_list_common_guides_help.c'
source_filename = "/home/carl/AnghaBench/git/extr_help.c_list_common_guides_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.category_description = type { i32*, i32 }

@CAT_guide = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"The common Git guides are:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @list_common_guides_help() #0 {
  %1 = alloca [2 x %struct.category_description], align 16
  %2 = getelementptr inbounds [2 x %struct.category_description], [2 x %struct.category_description]* %1, i64 0, i64 0
  %3 = getelementptr inbounds %struct.category_description, %struct.category_description* %2, i32 0, i32 0
  %4 = load i32, i32* @CAT_guide, align 4
  %5 = sext i32 %4 to i64
  %6 = inttoptr i64 %5 to i32*
  store i32* %6, i32** %3, align 16
  %7 = getelementptr inbounds %struct.category_description, %struct.category_description* %2, i32 0, i32 1
  %8 = call i32* @N_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %9 = ptrtoint i32* %8 to i32
  store i32 %9, i32* %7, align 8
  %10 = getelementptr inbounds %struct.category_description, %struct.category_description* %2, i64 1
  %11 = getelementptr inbounds %struct.category_description, %struct.category_description* %10, i32 0, i32 0
  store i32* null, i32** %11, align 16
  %12 = getelementptr inbounds %struct.category_description, %struct.category_description* %10, i32 0, i32 1
  store i32 0, i32* %12, align 8
  %13 = getelementptr inbounds [2 x %struct.category_description], [2 x %struct.category_description]* %1, i64 0, i64 0
  %14 = call i32 @print_cmd_by_category(%struct.category_description* %13, i32* null)
  %15 = call i32 @putchar(i8 signext 10)
  ret void
}

declare dso_local i32* @N_(i8*) #1

declare dso_local i32 @print_cmd_by_category(%struct.category_description*, i32*) #1

declare dso_local i32 @putchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
